Fix overflow

--- a/App/src/components/mealplan/Mealplan.scss
+++ b/App/src/components/mealplan/Mealplan.scss
@@ -1,9 +1,10 @@
 #mealplan {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: repeat(6, 1fr);
 	grid-template-rows: 60px auto;
 
 	h1 {
+		grid-column: span 5;
 		margin: 0;
 		align-self: center;
 	}
@@ -31,8 +32,12 @@
 		}
 	}
 
+	.selectionarea {
+		grid-column: span 6;
+	}
+
 	.plans {
-		grid-column: span 2;
+		grid-column: span 6;
 
 		display: grid;
 		grid-template-columns: repeat(7, 150px) 20px;
