--- a/App/src/components/recipes/Recipes.scss
+++ b/App/src/components/recipes/Recipes.scss
@@ -1,7 +1,3 @@
-#browse {
-	width: -moz-available;
-}
-
 .recepies {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
