--- a/App/src/components/selectionArea/SelectionArea.scss
+++ b/App/src/components/selectionArea/SelectionArea.scss
@@ -1,15 +1,18 @@
 .selectionarea {
-	grid-column: span 2;
 	background-color: var(--light);
 	border-radius: var(--br);
 	filter: var(--shadow);
 	padding: 20px;
+	font-size: 14px;
 
-	display: grid;
-	grid-auto-flow: column;
-	grid-template-rows: repeat(3, min-content);
+	max-width: calc(100% - 40px);
 
-	&[data-columns='1'] {
+	display: flex;
+	flex-wrap: wrap;
+
+	justify-content: center;
+
+	/* &[data-columns='1'] {
 		grid-template-columns: repeat(1, auto);
 	}
 	&[data-columns='2'] {
@@ -17,12 +20,16 @@
 	}
 	&[data-columns='3'] {
 		grid-template-columns: repeat(3, auto);
+	} */
+
+
+	& > div:first-child {
+		width: 100%;
+		max-width: calc(100% - 400px);
+		min-width: 460px;
 	}
 
-	font-size: 14px;
-
 	.search.tags {
-		margin-left: 20px;
 		width: min-content;
 
 		.bar {
@@ -81,7 +88,6 @@
 	}
 
 	.weekdays.selection {
-		margin-right: 20px;
 		margin-bottom: 40px;
 
 		width: auto;
